Update index file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="flexbox">
         <a href="flexbox.html" target="_blank">CSS Flexbox</a>
-        <img height="100%" src="images/flexbox.png" alt="CSS Flexbox">
+        <img src="images/flexbox.png" alt="CSS Flexbox">
       </div>
     </main>
     <footer>
